I need to fix the z indices of the elements on mobile view

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,6 +17,7 @@
 body {
     position: relative;
     min-height: 100vh;
+    height: 100%;
 }
 
 nav {
@@ -80,11 +81,12 @@ nav .links a:active {
 
 main {
     width: 100%;
+    height: 100%;
     background-image: url("../assets/images/background.jpg");
     background-size: cover;
     background-position: center;
     position: relative;
-    z-index: -2;
+    /* z-index: -2; */
     display: flex;
     flex-direction: column;
     align-items: center;
